--- a/index.ipynb
+++ b/index.ipynb
@@ -236,11 +236,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "count # add code here"
+    "countries.append('Malta') # add code here"
    ]
   },
   {
