Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -314,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries # add code here"
+    "countries[countris.index('New Mexic')] # add code here"
    ]
   },
   {
