--- a/index.ipynb
+++ b/index.ipynb
@@ -310,11 +310,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[countris.index('New Mexic')] # add code here"
+    "countries[countries.index('New Mexico')] = 'USA' # add code here"
    ]
   },
   {
